library_finder/style.css
R"=====(
html {
    font-family: sans-serif;
    background-color: hsl(0, 0%, 20%);
    margin: 0;
    height: 100%;
    overflow: -moz-scrollbars-vertical;
    overflow-y: scroll;
}

body {
    margin: 0;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.navbar {
background-color: white;
overflow: hidden;
opacity: 1;
height: 120px;
position: fixed; 
top: 0; 
left: 0;
width: 100%; 
z-index: 101;
}

#nav-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin-top: 12px;
    margin-bottom: 6px;
}

#title {
    letter-spacing: .117em;
    padding-left: 26px;
    margin: 0;
}

#command-subtitle-container {
    position: fixed;
    top: 99px;
    letter-spacing: .01em;
    font-family: monospace;
    color: white;
    padding: 4px;
    padding-bottom: 8px;
    padding-left: 26px;
    background-color: hsl(0, 0%, 20%);
    border-radius: 0 12px 0 0;
    z-index: 102;
    width: 100%;
    margin: 0;
}

#command-subtitle {
    margin: 0;
}

#nav-menu {
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;
}

.nav-menu-button,  #guide-container>div>h2, #help-container>div>h2, #about-container>div>h2{
    font-weight: normal;
    font-size: large;
    letter-spacing: .1em;
    padding: 12px;
    padding-top: 6px;
    padding-bottom: 6px;
    margin-left: 26px;
    border-radius: 22px;
    -webkit-user-select: none;
}

.nav-menu-button:hover, #guide-container>div>h2:hover {
    cursor: pointer;
    background-color: hsl(0, 0%, 80%);

}

#guide-container>div>h2, #about-container>div>h2 {
    margin: 0px;
}

#about-container>div:last-of-type {
    color: black;
    text-align: center;
    line-height: 1.8;
}

#about-container>div>a {
    color: black;
    text-align: center;
}

h4 {
    margin: auto;
}

#full-path-display {
    height: 20px;
    padding-left: 26px;
    padding-bottom: 3px;
}

code {
    font-family: 'Courier New', Courier, monospace;
    font-size: 11pt;
    color: white;
    background-color: hsl(0, 0%, 20%);
    padding: 4px;
    border-radius: 8px;
    line-height: 2em;
}

.search-box {
    padding-right: 26px;
}

.search-nav {
    display: flex;
    flex-direction: row;
}

.search-text {
    border-radius: 18px;
    height: 36px;
    width: 300px;
    padding-left: 12px;
    border: solid;
    border-width: 1px;
    outline: none;
}

.search-button {
    border-radius: 18px;
    height: 36px;
    width: 36px;
    border: solid;
    border-width: 1px;
    outline: none;
    background-color: white;
    margin-left: 6px;
}

.hover-button:hover {
    cursor: pointer;
    background-color: rgba(105, 105, 105, 0.507)
}

.click-button:active {
    background-color:  hsl(0, 0%, 90%);
}

#search-results {
    display: table-row;
    font-size: small;
    text-align: left;
    text-indent: 16px;
}

#guide-container {
    display: block;
    flex-direction: column;
    color: black;  
}

#guide-container>div, #help-container>div, #about-container {
    padding-left: 18px;
    padding-right: 18px;
    margin-top: 12px;
}

.icon {
    height: 30px;
    width: 30px;
}

.main {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
    top: 130px;
    width: 100%;
}

#explorer-container {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
    margin-left: 0px;
    margin-top: 126px;
}

ul {
    
    list-style:none;
    padding-left: 1em;
    height: 0;
    overflow: hidden;
    z-index: 0;
}

ul.show-list {
    height: auto;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 18px;
    padding-right: 3px;
}

li {
    background-color: white;
    border-radius: 12px;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 8px;
    padding-right: 25px;
    border-width: 1px;
    margin-bottom: 3px;
    z-index: 0;
}

.library-item-menu-button {
    margin-left: 20px;
    cursor: pointer;
    border-radius: 3px;
}

.library-item-menu-button:hover {
    background-color: rgba(105, 105, 105, 0.507);
    box-shadow: 0 0 0 3px rgba(105, 105, 105, 0.507);
}

.slide-open-text {
    max-height: 0;
    overflow: hidden;
    transition: max-height .5s;
    transition-delay: 0s;
    margin-left: 12px;
}

.close-sidebar-button {
    text-align: center;
    float: right;
    margin: 6px;
    font-size: small;
    padding: 12px;
    padding-top: 8px;
    height: 10px;
    width: 10px;
    overflow: visible;
    color: hsl(0, 0%, 20%);
    border-radius: 12px;
}

.close-sidebar-button:hover {
    background-color: hsl(0, 0%, 80%);
    cursor: pointer;
}

#about-container>div>p {
    margin-left: 12px;
}

.hidden {
    position:absolute;
    left:-10000px;
    top:-10000px;
    width:1px;
    height:1px;
    overflow:hidden;
}

.hover-details {
    margin-left: 26px;
    font-weight: bold;
    font-size: small;
    padding: 1px;
    height: auto;
    width: auto;
}

.album {
    font-weight: normal;
}

.hide {
    height: 0;
    padding-top: 0;
    padding-bottom: 0;
    overflow: hidden;
}

.library {
    font-weight: bold;
}

.collection {
    font-weight: bold;
}

.list-icon {
    height: 1em;
    width: 1em;
    margin-right: 0.5em;
}

.collection:hover, .library:hover, .path:hover, .album:hover {
    cursor: pointer;
    box-shadow: 0 0 0 3px rgba(105, 105, 105, 0.507);
}

.album:hover {
    cursor: default; 
}

.fade ul {
    height: 0;
   
  }
.fade ul.show-list {
    height: auto;
}

.library-item {
    transition: background-color .5s linear;
}

#library-explorer {
    top: auto;
    position: relative;
    padding-right: 18px;
    margin-top: 0;
    margin-left:0px;
    z-index: 1;
}

.insights-and-guide-container {  
    display: block;
    flex-direction: column;
}

#insights>ul {
    padding: 6px;
    float:left;
}

#insights>p {
    text-align: center;
}

.insights, .guide {
    border-radius: 0 12px 12px 0;
    padding-top: 3px;
    font-size: small;
    padding: 0;
    position: fixed;
    top: 0;
    left: 0;
    background-color:white;
    overflow:auto;
    word-wrap: none;
    z-index: 3;
    width: 400px;
    visibility: hidden;
    margin-top: 126px;
    height: 100vh;
    border: solid;
    border-width: 3px;
    border-color:  hsl(0, 0%, 20%);
}

#insights-expander-button {
    float: right;
    margin-right: 12px;
}

#insights-expander-button:hover {
    cursor: pointer;
}

.insights>ul {
    cursor: default;
}

.largest-folders {
    display: block;
    font-weight: bold;
}

.largest-folders:hover {
    cursor: pointer;
    box-shadow: 0 0 0 3px rgba(105, 105, 105, 0.507);
}

.largest-folders>span {
    font-weight: normal;
    overflow: hidden;
}

.current-search-result {
    text-decoration: underline;
    font-weight: bold;
}

#library-item-modal {
    border-radius: 12px;
    position: absolute;
    z-index: 100;
    background-color: white;
    text-align: right;
    padding-bottom: 10px;
    overflow: hidden;
    visibility: hidden;
    background-color: hsl(0, 0%, 90%);
    box-shadow: 2px 2px 7px black;
}

#library-item-modal.show-modal {
    visibility: visible;
    height: auto;
    width: auto;
}

.modal-menu-item {
    display: flex;
    justify-content: flex-start;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 12px;
    padding-right: 12px;

}

#library-item-modal>textarea {
    font-family: sans-serif;
    border: none;
    outline:none;
    resize: none;
    height: 2em;
    display: flex;
    padding-top: 3px;
    padding-bottom: 3px;
    background-color: hsl(0, 0%, 90%);
}

.modal-menu-item>a {
   font-size: small;
   color: black;
   text-decoration: none;
   padding: 3px;
   border-radius: 8px;
}

.modal-menu-item>a:hover {
    background-color: lightgray;
    cursor: pointer;
 }

 #disabler {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: .5;
    visibility: hidden;
    z-index: 99;
 }

 #icon-container>a {
    padding-top: 20px;
    color: black;
    justify-content: center;
 }

 #footer {
    margin-top: auto;
    color: white;
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
    line-height: 1.8;
    flex-shrink: 0;
 }

 .icon-link {
     color: white;
 }
)====="

